build/log/idf_py_stdout_output_4982
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/awe/esp/coba_modbus/build/bootloader/esp-idf/esptool_py && /home/awe/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/awe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/awe/esp/coba_modbus/build/bootloader/bootloader.bin
Bootloader binary size 0x66d0 bytes. 0x930 bytes (8%) free.
[2/8] Building C object esp-idf/rs485/CMakeFiles/__idf_rs485.dir/rs485.c.obj
FAILED: esp-idf/rs485/CMakeFiles/__idf_rs485.dir/rs485.c.obj 
/home/awe/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-1006-g02605f1a31-dirty\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/awe/esp/coba_modbus/build/config -I/home/awe/esp/coba_modbus/components/rs485/include -I/home/awe/esp/esp-idf/components/newlib/platform_include -I/home/awe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/awe/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/awe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/awe/esp/esp-idf/components/freertos/esp_additions/include -I/home/awe/esp/esp-idf/components/esp_hw_support/include -I/home/awe/esp/esp-idf/components/esp_hw_support/include/soc -I/home/awe/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/awe/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/awe/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/awe/esp/esp-idf/components/heap/include -I/home/awe/esp/esp-idf/components/log/include -I/home/awe/esp/esp-idf/components/soc/include -I/home/awe/esp/esp-idf/components/soc/esp32/. -I/home/awe/esp/esp-idf/components/soc/esp32/include -I/home/awe/esp/esp-idf/components/hal/esp32/include -I/home/awe/esp/esp-idf/components/hal/include -I/home/awe/esp/esp-idf/components/hal/platform_port/include -I/home/awe/esp/esp-idf/components/esp_rom/include -I/home/awe/esp/esp-idf/components/esp_rom/include/esp32 -I/home/awe/esp/esp-idf/components/esp_rom/esp32 -I/home/awe/esp/esp-idf/components/esp_common/include -I/home/awe/esp/esp-idf/components/esp_system/include -I/home/awe/esp/esp-idf/components/esp_system/port/soc -I/home/awe/esp/esp-idf/components/esp_system/port/include/private -I/home/awe/esp/esp-idf/components/xtensa/include -I/home/awe/esp/esp-idf/components/xtensa/esp32/include -I/home/awe/esp/esp-idf/components/lwip/include -I/home/awe/esp/esp-idf/components/lwip/include/apps -I/home/awe/esp/esp-idf/components/lwip/include/apps/sntp -I/home/awe/esp/esp-idf/components/lwip/lwip/src/include -I/home/awe/esp/esp-idf/components/lwip/port/esp32/include -I/home/awe/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/awe/esp/esp-idf/components/driver/include -I/home/awe/esp/esp-idf/components/driver/deprecated -I/home/awe/esp/esp-idf/components/driver/esp32/include -I/home/awe/esp/esp-idf/components/esp_pm/include -I/home/awe/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/awe/esp/coba_modbus=. -fmacro-prefix-map=/home/awe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/rs485/CMakeFiles/__idf_rs485.dir/rs485.c.obj -MF esp-idf/rs485/CMakeFiles/__idf_rs485.dir/rs485.c.obj.d -o esp-idf/rs485/CMakeFiles/__idf_rs485.dir/rs485.c.obj -c /home/awe/esp/coba_modbus/components/rs485/rs485.c
/home/awe/esp/coba_modbus/components/rs485/rs485.c: In function 'rs485_main':
/home/awe/esp/coba_modbus/components/rs485/rs485.c:57:17: warning: passing argument 1 of 'sprintf' makes pointer from integer without a cast [-Wint-conversion]
   57 |         sprintf(payload, "%s", rx_data);
      |                 ^~~~~~~
      |                 |
      |                 char
In file included from /home/awe/esp/coba_modbus/components/rs485/include/rs485.h:4,
                 from /home/awe/esp/coba_modbus/components/rs485/rs485.c:1:
/home/awe/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/xtensa-esp32-elf/sys-include/stdio.h:244:18: note: expected 'char * restrict' but argument is of type 'char'
  244 | int     sprintf (char *__restrict, const char *__restrict, ...)
      |                  ^
/home/awe/esp/coba_modbus/components/rs485/rs485.c:57:9: error: 'payload' is used uninitialized [-Werror=uninitialized]
   57 |         sprintf(payload, "%s", rx_data);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
